[package]
name = "ascii_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required for robust cross-platform terminal control (raw mode, cursor movement, color, input handling)
crossterm = "0.27" 

# Absolutely critical for the 3D math required to project the Vtuber model 
# (vectors, matrices, transformations, and complex math operations)
nalgebra = "0.32"
