[package]
name = "ascii_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependencies for the 3D Engine Core
nalgebra = "0.32"          # Critical for all 3D math (MVP matrices, rotations)
gltf = "1.0"               # Required for loading the Vtuber model format

# Dependencies for the Graphical Debugging/Verification (The OpenGL Window)
winit = "0.28"             # Windowing library
glutin = "0.30"            # OpenGL context creator
gl = "0.14"                # Raw OpenGL bindings
shader_version = "0.7.0"   # <--- CORRECTED: Updated to stable version 

# Dependencies for the Final Output Stage (The ASCII Terminal)
crossterm = "0.27"
